# HuboBackup

devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/lib/: libchomp_motion_planner.so.1.1.0  libchomp_planner_plugin.so.1.1.0  libcollision_detector_bullet_plugin.so.1.1.0  libcollision_detector_fcl_plugin.so.1.1.0  libmoveit_background_processing.so.1.1.0  libmoveit_cached_ik_kinematics_base.so.1.1.0  libmoveit_cached_ik_kinematics_plugin.so.1.1.0  libmoveit_chomp_optimizer_adapter.so.1.1.0  libmoveit_collision_detection.so.1.1.0  libmoveit_collision_detection_bullet.so.1.1.0  libmoveit_collision_detection_fcl.so.1.1.0  libmoveit_collision_distance_field.so.1.1.0  libmoveit_collision_plugin_loader.so.1.1.0  libmoveit_common_planning_interface_objects.so.1.1.0  libmoveit_constraint_sampler_manager_loader.so.1.1.0  libmoveit_constraint_samplers.so.1.1.0  libmoveit_cpp.so.1.1.0  libmoveit_default_planning_request_adapter_plugins.so.1.1.0  libmoveit_depth_image_octomap_updater.so.1.1.0  libmoveit_depth_image_octomap_updater_core.so.1.1.0  (+65 more)
src/: .rosinstall  .rosinstall.bak
src/howdy/motion_planning_api/: CMakeLists.txt
src/howdy/motion_planning_api/launch/: motion_planning_api_edit.launch
src/howdy/motion_planning_api/src/: motion_planning_api_edit.cpp
src/howdy/robot_model_and_robot_state/: CMakeLists.txt
src/howdy/robot_model_and_robot_state/launch/: robot_model_and_robot_state_edit.launch
src/howdy/robot_model_and_robot_state/src/: robot_model_and_robot_state_edit.cpp
(+1624 files in other folders)
